Z-index background animation bug fix

--- a/resources/styles/login_styles.css
+++ b/resources/styles/login_styles.css
@@ -38,8 +38,8 @@ body {
 .form {
 	display: flex;
 	flex-direction: column;
-	width: 25vw;
-	height: 55vh;
+	width: 20vw;
+	height: 50vh;
 	gap: 10px;
 	padding-left: 2em;
 	padding-right: 2em;
@@ -172,6 +172,7 @@ body {
 	left: 0;
 	background: #1f1f1f;
 	overflow: hidden;
+	z-index: -1;
 }
 
 .background span {
